--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -97,3 +97,18 @@ form {
     margin-top: 16px;
   }
 }
+
+.add-button {
+    text-decoration: none;
+    color: white;
+    background-color: darkslategray;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 20px;
+    padding: 5px;
+}
+
+.add-button:hover {
+    color: black;
+    background-color: gray;
+}
